--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.profiles.active=local
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+spring.messages.basename=errors
+
 spring.config.import=application-sql.properties
