--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,4 +1,6 @@
-required.memberSignupForm.userId=???? ?? 20? ?? ?????
+required.memberSignupForm.userId=아이디는 필수 값입니다
+required.memberSignupForm.userPassword=비밀번호는 필수 값입니다
+required.memberSignupForm.name=이름은 필수 값입니다
 
-required=?? ????
-range={0} ~ {1} ?? ??? ???
+required=필수 값입니다
+range={0} ~ {1} 범위의 값을 입력해 주세요
