sovled error in displaying login fail message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.thymeleaf.encoding=UTF-8
 spring.messages.basename=errors
 
 spring.config.import=application-sql.properties
+
+logging.level.root=info
