add duplicate ID validation

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,8 +2,11 @@ required.memberSignupForm.userId=아이디는 필수 값입니다
 required.memberSignupForm.userPassword=비밀번호는 필수 값입니다
 required.memberSignupForm.name=이름은 필수 값입니다
 
+notUniqueId.memberSignupForm.userId=이미 사용중인 아이디입니다
+
 required.memberLoginForm.userId=아이디는 필수 값입니다
 required.memberLoginForm.userPassword=비밀번호는 필수 값입니다
+
 
 required=필수 값입니다
 range={0} ~ {1} 범위의 값을 입력해 주세요
