added board basic structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.profiles.active=local
 spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 spring.messages.basename=errors
+debug=false
 
 spring.config.import=application-sql.properties
 
