--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.profiles.active=local
-spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 spring.messages.basename=errors
 debug=false
 
+#live reload
+# 1. 기본 라이브 리로드 관련 설정
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+# 2. 스프링이 타임리프와 정적파일(css, js) 경로 인식할 수 있도록 설정
+# 이 부분은 devtools가 포함되지 않은 배포판에서는 문제가 생길 수 있다
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.web.resources.static-locations=file:src/main/resources/static/
+
+# db 계정 정보 담은 파일
 spring.config.import=application-sql.properties
 
 logging.level.root=info
