search imple (need refactoring domain DTO DAO objects and some boardService methods)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,9 @@
-#live reload
+# live reload 관련 설정들
 # 1. 기본 라이브 리로드 관련 설정
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
-
 # 2. 스프링이 타임리프와 정적파일(css, js) 경로 인식할 수 있도록 설정
-# 이 부분은 배포판에도 필요하므로 메인에 둠
-
+#   이 부분은 배포판에도 필요하므로 메인에 둠
 
 debug=false
